--- a/templates/basket.html
+++ b/templates/basket.html
@@ -38,9 +38,9 @@
     </table>
     <div class="text-right">
         {% if empty%}
-        <a href="/book" class="v btn-lg btn-outline-success" data-bs-toggle="modal" data-bs-target="#modal">Оформить</a>
+        <a href="/book" class="btn-lg btn-outline-success" data-bs-toggle="modal" data-bs-target="#modal">Оформить</a>
         {% else %}
-        <a href="/book" class="rounded-pill btn-lg btn-success">Оформить</a>
+        <a href="/book" class="btn-lg btn-success">Оформить</a>
         {% endif %}
     </div>
     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="Label" aria-hidden="true">
