--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,7 @@
                 <p class="alert alert-danger" role="alert">{{ error }}</p>
                 {% endfor %}
                 {{ form.submit(type="submit", class="btn btn-primary") }}
+                <div>{{ message }}</div>
             </form>
         </div>
     </div>
