--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,16 @@ footer {
     width: 100%;
     height: auto;
 }
+h2 {
+    font-size: 40px;
+}
+.rounded-btn {
+    border-radius: 8px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.jumbotron {
+    height: 100vh;
+}
 .star_cont {
     display: flex;
     flex-direction: row-reverse;
@@ -30,9 +40,6 @@ footer {
 .visible-a, .visible-a:hover, .visible-a:visited, .visible-a:active {
     color: inherit;
     text-decoration: none;
-}
-.navbar {
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .btn-border{
     border-radius: 30px;
@@ -63,7 +70,7 @@ footer {
  display: block;
  font-size: 35px;
  font-weight: 700;
- padding: 30px 0;
+ padding: 10px;
 }
 .form-horizontal .form-group{
  padding: 0 40px;
@@ -158,18 +165,7 @@ footer {
  font-size: 14px;
  color: #fff;
  background: #00b4ef;
- border-radius: 30px;
- padding: 10px 25px;
- border: none;
- text-transform: capitalize;
- transition: all 0.5s ease 0s;
-}
-.form-horizontal .btn-success{
- float: right;
- font-size: 14px;
- color: #198754;
- background: #00b4ef;
- border-radius: 30px;
+ border-radius: 8px;
  padding: 10px 25px;
  border: none;
  text-transform: capitalize;
